Some more code cleanup and tests